--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "jest": "^23.1.0",
     "react": "^16.4.0",
     "redux": "^4.0.0",
-    "relay": "^0.8.0-1"
+    "relay": "^0.8.0-1",
+    "ts-loader": "^4.3.1",
+    "webpack": "^4.11.1"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
